@@ -64,7 +64,7 @@ create_playlist_treemodel (void)
 {
         GtkTreeStore *store;
 
-        store = gtk_tree_store_new (5,
+        store = gtk_tree_store_new (6,
                                     /* Icon */
                                     GDK_TYPE_PIXBUF,
                                     /* Title */
@@ -74,7 +74,12 @@ create_playlist_treemodel (void)
                                     /* Id */
                                     G_TYPE_STRING,
                                     /* Is container? */
-                                    G_TYPE_BOOLEAN);
+                                    G_TYPE_BOOLEAN,
+                                    /* Resource Hashtable
+                                     * key = Protocol Info
+                                     * value = URI
+                                     */
+                                    G_TYPE_HASH_TABLE);
 
         return GTK_TREE_MODEL (store);
 }
@@ -284,6 +289,51 @@ get_item_icon (xmlNode *object_node)
         return icon;
 }
 
+static GHashTable *
+get_resource_hash (xmlNode *object_node)
+{
+   GHashTable *resource_hash;
+   GList *resources;
+   GList *iter;
+
+   resources = gupnp_didl_lite_object_get_resources (object_node);
+
+   if (resources == NULL)
+           return NULL;
+
+   resource_hash = g_hash_table_new_full (g_str_hash,
+                                          g_str_equal,
+                                          g_free,
+                                          g_free);
+
+   for (iter = resources; iter; iter = iter->next) {
+           xmlNode *res_node;
+           char *uri;
+           char *proto_info;
+
+           res_node = (xmlNode *) iter->data;
+           proto_info = gupnp_didl_lite_resource_get_protocol_info (res_node);
+           if (proto_info == NULL)
+                   continue;
+
+           uri = gupnp_didl_lite_resource_get_contents (res_node);
+           if (uri == NULL) {
+                   g_free (proto_info);
+                   continue;
+           }
+
+           g_hash_table_insert (resource_hash, proto_info, uri);
+   }
+
+   if (g_hash_table_size (resource_hash) == 0) {
+           /* No point in keeping empty hash tables here */
+           g_hash_table_destroy (resource_hash);
+           resource_hash = NULL;
+   }
+
+   return resource_hash;
+}
+
 static void
 append_didle_object (xmlNode               *object_node,
                      GUPnPMediaServerProxy *proxy,
@@ -296,6 +346,7 @@ append_didle_object (xmlNode               *object_node,
         char       *title;
         gboolean    is_container;
         GdkPixbuf  *icon;
+        GHashTable *resource_hash;
         gint        position;
 
         id = gupnp_didl_lite_object_get_id (object_node);
@@ -317,6 +368,28 @@ append_didle_object (xmlNode               *object_node,
 
         is_container = gupnp_didl_lite_object_is_container (object_node);
 
+        /* FIXME: The following code assumes that container is always
+        * added to treeview before the objects under it. Although this
+        * is currently always true but things might change after we
+        * start to support container updates.
+        */
+        if (is_container) {
+                position = 0;
+                resource_hash = NULL;
+                icon = get_icon_by_id (ICON_CONTAINER);
+        } else {
+                position = -1;
+                resource_hash = get_resource_hash (object_node);
+                if (resource_hash == NULL) {
+                        g_free (id);
+                        g_free (title);
+                        g_free (parent_id);
+                        return;
+                }
+
+                icon = get_item_icon (object_node);
+        }
+
         if (!find_row (model,
                        server_iter,
                        &parent_iter,
@@ -328,19 +401,6 @@ append_didle_object (xmlNode               *object_node,
                 parent_iter = *server_iter;
         }
 
-        /* FIXME: The following code assumes that container is always
-        * added to treeview before the objects under it. Although this
-        * is currently always true but things might change after we
-        * start to support container updates.
-        */
-        if (is_container) {
-                position = 0;
-                icon = get_icon_by_id (ICON_CONTAINER);
-        } else {
-                position = -1;
-                icon = get_item_icon (object_node);
-        }
-
         gtk_tree_store_insert_with_values (GTK_TREE_STORE (model),
                                            NULL, &parent_iter, position,
                                            0, icon,
@@ -348,6 +408,7 @@ append_didle_object (xmlNode               *object_node,
                                            2, proxy,
                                            3, id,
                                            4, is_container,
+                                           5, resource_hash,
                                            -1);
 
         g_free (parent_id);
